--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
-language: ruby
-script:
-  - echo hi
+language: node_js
+git:
+  depth: 10
+node_js:
+  - "0.12"
+install:
+  - npm install -g grunt-cli
