--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tacit",
-  "version": "1.0-snapshot",
+  "version": "1.0.0",
   "copyright": "2015",
   "description": "CSS Framework for Dummies",
   "main": "index.js",
