#2 scss-lint added

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -3,6 +3,7 @@ assets:
 install: |
   sudo gem install --no-ri pdd
   sudo gem install --no-ri compass
+  sudo gem install --no-ri scss-lint
   sudo npm install -g grunt-cli
   npm install
 architect:
