--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "CSS Framework for Dummies",
   "main": "index.js",
   "scripts": {
-    "test": "grunt"
+    "test": "grunt --no-color"
   },
   "repository": {
     "type": "git",
