--- a/.rultor.yml
+++ b/.rultor.yml
@@ -23,8 +23,11 @@ deploy:
 release:
   script: |-
     sed -i "s/1\.0\.0/${tag}/g" package.json
+    sed -i "s/1\.0\.0/${tag}/g" bower.json
     sed -i "s/VERSION/${tag}/g" index.html
     grunt --no-color
+    cp dist/tacit-${tag}.min.css .
+    git add tacit-${tag}.min.css
     git commit -am "${tag}"
     mv dist/tacit-${tag}.min.css /tmp
     mv index.html /tmp
