#14 sudo for cleaning

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -33,7 +33,7 @@ release:
     mv index.html /tmp
     git checkout gh-pages
     git reset --hard
-    git clean -fd
+    sudo git clean -fd
     mv /tmp/tacit-${tag}.min.css .
     git add tacit-${tag}.min.css
     cp tacit-${tag}.min.css tacit.min.css
