year updated to 2016

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ git:
   depth: 10
 node_js:
   - "0.12"
+addons:
+  apt:
+    packages:
+      - ruby
 before_install:
-  - sudo apt-get install -y ruby
   - npm install -g grunt-cli
   - gem install --no-ri compass
   - gem install --no-ri scss-lint
