--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/yegor256/tacit",
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-shell": "1.1.2",
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
     "grunt-scss-lint": "0.3.8",
