new rultor coords

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,5 +1,5 @@
 assets:
-  s3cfg: yegor256/home#assets/s3cfg
+  s3cfg: zerocracy/home#assets/s3cfg
 install: |
   sudo npm install -g grunt-cli
   sudo gem install --no-ri pdd
