--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
   ],
   "homepage": "https://github.com/yegor256/tacit",
   "devDependencies": {
-    "grunt": "0.4.5",
-    "grunt-shell": "1.1.2",
+    "grunt": "^0.4.5",
     "grunt-contrib-sass": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
     "grunt-scss-lint": "0.3.8",
+    "grunt-shell": "1.1.2",
     "load-grunt-tasks": "3.4.0"
   }
 }
