--- a/.rultor.yml
+++ b/.rultor.yml
@@ -4,7 +4,7 @@ install: |
   sudo gem install --no-ri pdd
   sudo gem install --no-ri compass
   sudo gem install --no-ri scss-lint
-  sudo npm install
+  npm install
 architect:
 - yegor256
 - davvd
