--- a/.rultor.yml
+++ b/.rultor.yml
@@ -34,7 +34,7 @@ release:
     mv index.html /tmp
     git checkout gh-pages
     git reset --hard
-    sudo git clean -fd
+    sudo /bin/bash -c "cd '$(pwd)'; git clean -fd"
     mv /tmp/tacit-${tag}.min.css .
     git add tacit-${tag}.min.css
     cp tacit-${tag}.min.css tacit.min.css
