--- a/.rultor.yml
+++ b/.rultor.yml
@@ -4,6 +4,7 @@ install: |
   sudo gem install --no-ri pdd
   sudo gem install --no-ri compass
   sudo gem install --no-ri scss-lint
+  npm config set color false
   npm install
 architect:
 - yegor256
