--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tacit",
+  "name": "tacit-css",
   "version": "1.0.0",
   "copyright": "2015",
   "description": "CSS Framework for Dummies",
