--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,13 @@ language: node_js
 git:
   depth: 10
 node_js:
-  - "0.12"
+  - 4
 addons:
   apt:
     packages:
       - ruby
 before_install:
-  - gem install --no-ri scss-lint
+  - gem install --no-ri sass
 install:
   - npm install
 
