refactor: replace ruby sass with node sass

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
   "homepage": "https://github.com/yegor256/tacit",
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-contrib-sass": "1.0.0",
     "grunt-contrib-watch": "1.0.0",
+    "grunt-sass": "^2.0.0",
     "grunt-sass-lint": "^0.2.4",
     "grunt-shell": "1.1.2",
     "load-grunt-tasks": "3.4.0"
