--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "tacit",
-  "version": "VERSION",
+  "version": "1.3.8",
   "homepage": "https://github.com/yegor256/tacit",
   "authors": [
     "Yegor Bugayenko <yegor256@gmail.com>"
