Sixnines.io HTTPS

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,6 +1,6 @@
 assets:
-  s3cfg: zerocracy/home#assets/s3cfg
-  npmrc: zerocracy/home#assets/npmrc
+  s3cfg: yegor256/home#assets/s3cfg
+  npmrc: yegor256/home#assets/npmrc
 install: |
   sudo gem install --no-document pdd
   npm install --no-color
