--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "grunt": "^1.0.3",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-css-purge": "^1.1.0",
     "grunt-sass": "^2.0.0",
     "grunt-sass-lint": "^0.2.4",
     "load-grunt-tasks": "3.4.0"
