--- a/package.json
+++ b/package.json
@@ -28,17 +28,16 @@
   ],
   "homepage": "https://github.com/yegor256/tacit",
   "devDependencies": {
-    "grunt": "^1.0.3",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-css-purge": "^1.1.0",
-    "grunt-sass": "^2.0.0",
-    "grunt-sass-lint": "^0.2.4",
-    "load-grunt-tasks": "3.4.0"
-  },
-  "dependencies": {
-    "css-validator": "^0.8.1",
-    "glob": "^7.1.3",
-    "npm": "^6.2.0",
-    "path": "^0.12.7"
+    "grunt": "^1.4.3",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-css-purge": "1.1.0",
+    "grunt-sass": "3.1.0",
+    "grunt-sass-lint": "0.2.4",
+    "load-grunt-tasks": "5.1.0",
+    "css-validator": "0.11.0",
+    "glob": "10.2.6",
+    "npm": "9.6.7",
+    "node-sass": "9.0.0",
+    "path": "0.12.7"
   }
 }
