--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "copyright": "2015",
   "description": "CSS Framework for Dummies",
-  "main": "index.js",
+  "main": "dist/tacit-css.css",
   "scripts": {
     "test": "grunt --no-color",
     "rultor": "grunt rultor --no-color",
