--- a/.github/workflows/grunt.yml
+++ b/.github/workflows/grunt.yml
@@ -33,7 +33,7 @@ jobs:
         node: [16]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/v4
+    - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node }}
