--- a/.github/workflows/grunt.yml
+++ b/.github/workflows/grunt.yml
@@ -21,10 +21,13 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.13.2"
       - uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
-      - run: pip install setuptools
+      - run: pip install --upgrade setuptools
       - run: npm install
       - run: npm install --force -g grunt-cli
       - run: grunt
