--- a/REUSE.toml
+++ b/REUSE.toml
@@ -4,13 +4,22 @@
 version = 1
 [[annotations]]
 path = [
+    ".DS_Store",
+    ".gitattributes",
+    ".gitignore",
+    ".gitmodules",
     ".npmignore",
+    ".pdd",
     ".sasslintrc",
     "**.json",
     "**.md",
     "**.png",
     "**.svg",
     "**.txt",
+    "**/.DS_Store",
+    "**/.gitignore",
+    "**/.gitmodules",
+    "**/.pdd",
     "**/*.csv",
     "**/*.jpg",
     "**/*.json",
@@ -20,14 +29,7 @@ path = [
     "**/*.svg",
     "**/*.txt",
     "**/*.vm",
-    "**/.DS_Store",
-    "**/.gitignore",
-    "**/.pdd",
     "**/CNAME",
-    ".DS_Store",
-    ".gitattributes",
-    ".gitignore",
-    ".pdd",
     "README.md",
     "renovate.json",
 ]
