--- a/.github/workflows/typos.yml
+++ b/.github/workflows/typos.yml
@@ -1,6 +1,7 @@
 # SPDX-FileCopyrightText: Copyright (c) 2015-2025 Yegor Bugayenko
 # SPDX-License-Identifier: MIT
 ---
+# yamllint disable rule:line-length
 name: typos
 'on':
   push:
