Refactor npm script in .rultor.yml to use npm test command.

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -14,7 +14,7 @@ architect:
   - filfreire
 merge:
   script: |
-    npm run rultor --no-color
+    npm test --no-color
   commanders:
     - yegor256
     - filfreire
