--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "grunt-sass": "4.0.0",
     "grunt-sass-lint": "0.2.4",
     "load-grunt-tasks": "5.1.0",
-    "sass": "^1.89.0",
     "npm": "11.6.2",
-    "path": "0.12.7"
+    "path": "0.12.7",
+    "sass": "^1.89.0"
   },
   "files": [
     "dist",
